--- a/webv3/package.json
+++ b/webv3/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "react-slideshow-image": "^1.2.2",
-    "router-web601": "git+https://github.com/alikahwaji/NavBar.git"
+    "router-web601": "git+https://github.com/alikahwaji/NavBar.git",
+    "styled-components": "^5.0.0-beta.9"
   },
   "scripts": {
     "start": "react-scripts start",
