--- a/webv3/package.json
+++ b/webv3/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "react": "^16.9.0",
+    "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.12.0",
     "react-scripts": "3.1.1",
     "react-slideshow-image": "^1.2.2",
+    "reactstrap": "^8.1.1",
     "router-web601": "git+https://github.com/alikahwaji/NavBar.git",
     "styled-components": "^5.0.0-beta.9"
   },
@@ -32,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-redux": "^7.1.3"
   }
 }
