--- a/webv3/package.json
+++ b/webv3/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.12.0",
+    "bootstrap": "^4.6.0",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.3",
+    "react-dom": "^16.14.0",
     "react-scripts": "3.1.1",
-    "react-slideshow-image": "^1.2.2",
-    "reactstrap": "^8.1.1",
+    "react-slideshow-image": "^1.5.3",
+    "reactstrap": "^8.9.0",
     "router-web601": "git+https://github.com/alikahwaji/NavBar.git",
-    "styled-components": "^5.0.0-beta.9"
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,6 +35,6 @@
     ]
   },
   "devDependencies": {
-    "react-redux": "^7.1.3"
+    "react-redux": "^7.2.2"
   }
 }
