--- a/webv3/package.json
+++ b/webv3/package.json
@@ -7,7 +7,7 @@
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^4.0.2",
     "react-slideshow-image": "^1.5.3",
     "reactstrap": "^8.9.0",
     "router-web601": "git+https://github.com/alikahwaji/NavBar.git",
