Added Linting Packages

--- a/webv3/package.json
+++ b/webv3/package.json
@@ -35,6 +35,27 @@
     ]
   },
   "devDependencies": {
-    "react-redux": "^7.2.2"
-  }
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.22.0",
+    "prettier": "2.2.1",
+    "react-redux": "^7.2.2",
+    "stylelint": "^13.9.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^20.0.0"
+  }, 
+  
+    "lint-staged": {
+      "**/*": "prettier --write --ignore-unknown"
+    },
+    "husky": {
+      "hooks": {
+        "pre-commit": "lint-staged"
+      }
+    }
+  
 }
