--- a/webv3/package.json
+++ b/webv3/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "fakeDB": "json-server --watch db.json"
+    "fakeDB": "npx json-server --watch db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
